[metadata]
name = example
description = Short one-sentence summary of the bot.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/lsst-sqre/example
project_urls =
    Change log = https://github.com/lsst-sqre/example/master/blob/CHANGELOG.rst
    Source code = https://github.com/lsst-sqre/example
    Issue tracker = https://github.com/lsst-sqre/example/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages=find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
# Use requirements/main.in for runtime dependencies instead of install_requires

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest==4.5.0  # match lsst_distrib's pytest
    pytest-cov==2.6.1
    pytest-flake8==1.0.4
    pytest-mypy==0.4.2
    pytest-aiohttp

[flake8]
max-line-length = 79

[tool:pytest]
addopts = --flake8 --mypy --cov=src/example

[mypy]
ignore_missing_imports = True
