[metadata]
name = {{cookiecutter.repo_name}}
description = {{cookiecutter.summary}}.
author = {{cookiecutter.copyright_holder}}
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/{{cookiecutter.github_org}}/{{cookiecutter.repo_name}}
project_urls =
    Change log = https://github.com/{{cookiecutter.github_org}}/{{cookiecutter.repo_name}}/master/blob/CHANGELOG.rst
    Source code = https://github.com/{{cookiecutter.github_org}}/{{cookiecutter.repo_name}}
    Issue tracker = https://github.com/{{cookiecutter.github_org}}/{{cookiecutter.repo_name}}/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages=find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
# Use requirements/main.in for runtime dependencies instead of install_requires

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    {{cookiecutter.package_name}} = {{cookiecutter.package_name}}.cli:main

[flake8]
max-line-length = 79

[mypy]
ignore_missing_imports = True
