[metadata]
name = example
description = Short one-sentence description of the package
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
license = MIT
# url = https://example.lsst.io
project_urls =
    Source code = https://github.com/lsst-sqre/example
    Issue tracker = https://github.com/lsst-sqre/example/issues
    # Change log = https://example.lsst.io/changelog.html
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
keywords =
    rubinobs
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
# install_requires =

[options.packages.find]
where = src

[options.extras_require]
dev =
    coverage[toml]
    mypy
    pre-commit
    pytest
    pytest-asyncio
    # documentation
    documenteer
    lsst-sphinx-bootstrap-theme
    sphinx-automodapi
    sphinx-prompt
    myst-parser

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503
exclude =
    docs/conf.py

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
# plugins =
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
